--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Title</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Form</title>
 </head>
 <body>
     <main>
-        <div>
-            <h1>Form</h1>
-        </div>
-        <form>
-            <h2>Donec vel hendrerit dolor</h2>
-            <h3>Nulla id lacus ante. Integer sit amet eros leo.</h3>
-            <div>
-                <label for="email">Email address:</label>
-                <input type="email" id="email" required> 
+        <div class="container">
+            <form>
+                <h2>Donec vel hendrerit dolor</h2>
+                <h3>Nulla id lacus ante. Integer sit amet eros leo.</h3>
+                <div>
+                    <label for="email">Email address:</label>
+                    <input type="email" id="email" required>
+                </div>
+                <div>
+                    <label for="phone">Phone (recommended):</label>
+                    <input type="text" id="phone">
+                </div>
+                <div>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" required>
+                </div>
+                <input type="submit" id="submit" value="Submit">
+                <div class="bottom-text">
+                    <p>Maecenas pellentesque dictum elementum. Etiam aliquet et enim egestas porta. Quisque ac suscipit felis.</p>
+                </div>
+            </form>
+            <div class="form-footer">
+                <p>Duis quis lacinia magna, eu malesuada ipsum. Nunc velit ex, maximus non odio non, consectetur imperdiet magna.</p>
             </div>
-            <div>
-                <label for="phone">Phone (recommended):</label>
-                <input type="text" id="phone">
-            </div>
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" id="password" required>
-            </div>
-            <input type="submit" id="submit" value="Submit">
-            <div>
-                <p>Maecenas pellentesque dictum elementum. Etiam aliquet et enim egestas porta. Quisque ac suscipit felis.</p>
-            </div>
-        </form>
-        <div>
-            <p>Duis quis lacinia magna, eu malesuada ipsum. Nunc velit ex, maximus non odio non, consectetur imperdiet magna.</p>
         </div>
     </main>
 </body>
