issus and missing tags fixed

--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <title>Form</title>
 </head>
 <body>
+<header>
+    <div>
+        <p>Already have an Intuit account?<a href="#">I forgot my User ID or Password</a></p>
+        <a href="#">Sing In</a>
+    </div>
+</header>
     <main>
         <div class="container">
             <form>
-                <h2>Donec vel hendrerit dolor</h2>
-                <h3>Nulla id lacus ante. Integer sit amet eros leo.</h3>
+                <h2>Create an Intuit account.</h2>
+                <h3>One account for everything Intuit, including Mint.</h3>
+                <a href="#">Learn more</a>
                 <div>
                     <label for="email">Email address:</label>
                     <input type="email" id="email" required>
@@ -33,5 +40,19 @@
             </div>
         </div>
     </main>
+<footer>
+    <div>
+        <a href="#">Legal</a>
+        <a href="#">Privacy</a>
+        <a href="#">Security</a>
+    </div>
+    <div>
+        © 2019 Intuit, Inc. All rights reserved. Intuit, QuickBooks, QB, TurboTax, ProConnect and Mint are registered
+        trademarks of Intuit Inc.
+    </div>
+    <div>
+        Terms and conditions, features, support, pricing, and service options subject to change without notice.
+    </div>
+</footer>
 </body>
 </html>
