--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <header>
     <div>
-        <p>Already have an Intuit account?<a href="#">I forgot my User ID or Password</a></p>
+        <p>Already have an Intuit account?<br><a href="#">I forgot my User ID or Password</a></p>
         <a href="#">Sing In</a>
     </div>
 </header>
@@ -17,14 +17,14 @@
             <form>
                 <h2>Create an Intuit account.</h2>
                 <h3>One account for everything Intuit, including Mint.</h3>
-                <a href="#">Learn more</a>
+                <a class="learn-more-link" href="#">Learn more</a>
                 <div>
                     <label for="email">Email address:</label>
                     <input type="email" id="email" required>
                 </div>
                 <div>
                     <label for="phone">Phone (recommended):</label>
-                    <input type="text" id="phone">
+                    <input type="tel" id="phone">
                 </div>
                 <div>
                     <label for="password">Password:</label>
@@ -32,11 +32,11 @@
                 </div>
                 <input type="submit" id="submit" value="Submit">
                 <div class="bottom-text">
-                    <p>Maecenas pellentesque dictum elementum. Etiam aliquet et enim egestas porta. Quisque ac suscipit felis.</p>
+                    <p>By clicking Create account, you agree to our <a href="#">Terms</a> and have read and acknowledge our <a href="#">Privacy Statement.</a></p>
                 </div>
             </form>
             <div class="form-footer">
-                <p>Duis quis lacinia magna, eu malesuada ipsum. Nunc velit ex, maximus non odio non, consectetur imperdiet magna.</p>
+                <p>Invisible reCAPTCHA by Google <a href="#">Privacy Policy</a> and <a href="#">Terms of Use.</a></p>
             </div>
         </div>
     </main>
