image added and fotter modified

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <header>
     <div>
         <p>Already have an Intuit account?<br><a href="#">I forgot my User ID or Password</a></p>
-        <a href="#">Sing In</a>
+        <a href="#">Sign In</a>
     </div>
 </header>
     <main>
         <div class="container">
+            <div>
+                <img src="https://user-images.githubusercontent.com/36057474/63075466-b6073200-bf29-11e9-9915-d2d8e495d501.png" alt="Intuit Logo">
+            </div>
             <form>
                 <h2>Create an Intuit account.</h2>
                 <h3>One account for everything Intuit, including Mint.</h3>
